; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/winmm/extr_capture.c_wave_in_error.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/winmm/extr_capture.c_wave_in_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@wave_in_error.msg = internal global [1024 x i8] zeroinitializer, align 16
@wave_in_error.long_msg = internal global [1100 x i8] zeroinitializer, align 16
@MMSYSERR_NOERROR = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [45 x i8] c"waveInGetErrorTextA(%x) failed with error %x\00", align 1
@.str.1 = private unnamed_addr constant [7 x i8] c"%s(%s)\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i64)* @wave_in_error to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @wave_in_error(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %4 = load i64, i64* %2, align 8
  %5 = call i64 @waveInGetErrorTextA(i64 %4, i8* getelementptr inbounds ([1024 x i8], [1024 x i8]* @wave_in_error.msg, i64 0, i64 0), i32 1024)
  store i64 %5, i64* %3, align 8
  %6 = load i64, i64* %3, align 8
  %7 = load i64, i64* @MMSYSERR_NOERROR, align 8
  %8 = icmp ne i64 %6, %7
  br i1 %8, label %9, label %15

9:                                                ; preds = %1
  %10 = load i64, i64* %2, align 8
  %11 = inttoptr i64 %10 to i8*
  %12 = load i64, i64* %3, align 8
  %13 = inttoptr i64 %12 to i8*
  %14 = call i32 @sprintf(i8* getelementptr inbounds ([1100 x i8], [1100 x i8]* @wave_in_error.long_msg, i64 0, i64 0), i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str, i64 0, i64 0), i8* %11, i8* %13)
  br label %19

15:                                               ; preds = %1
  %16 = load i64, i64* %2, align 8
  %17 = call i8* @mmsys_error(i64 %16)
  %18 = call i32 @sprintf(i8* getelementptr inbounds ([1100 x i8], [1100 x i8]* @wave_in_error.long_msg, i64 0, i64 0), i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0), i8* %17, i8* getelementptr inbounds ([1024 x i8], [1024 x i8]* @wave_in_error.msg, i64 0, i64 0))
  br label %19

19:                                               ; preds = %15, %9
  ret i8* getelementptr inbounds ([1100 x i8], [1100 x i8]* @wave_in_error.long_msg, i64 0, i64 0)
}

declare dso_local i64 @waveInGetErrorTextA(i64, i8*, i32) #1

declare dso_local i32 @sprintf(i8*, i8*, i8*, i8*) #1

declare dso_local i8* @mmsys_error(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
